fixed bugs on mobile

--- a/frontEnd/css/globalStyles.scss
+++ b/frontEnd/css/globalStyles.scss
@@ -136,6 +136,21 @@ button
     left: -25%;
 }
 
+@media only screen and (max-device-width: 480px) 
+{
+    #sidebar 
+    {
+        width: 50%;
+    }
+
+    #sidebar.collapsed 
+    {
+        left: -50%;
+    }
+
+}
+
+
 #close-sidebar-button
 {
     position: absolute;
